# fifa-wc2026-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cli.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: data_dictionary.md  datamart_architecture.md  looker_setup.md
looker/dashboards/: fifa_wc2026.dashboard.lkml
looker/explores/: fifa_explore.lkml
looker/models/: fifa_wc2026.model.lkml
looker/views/: dim_matches.view.lkml  dim_players.view.lkml  dim_stadiums.view.lkml  dim_teams.view.lkml  fact_performance.view.lkml
sql/ddl/: create_dimensions.sql  create_fact.sql
sql/queries/: position_analysis.sql  stadium_analysis.sql  team_performance.sql  top_scorers.sql  tournament_progression.sql
src/: __init__.py  __main__.py  cli_runner.py  logging_config.py  paths.py
src/analysis/: __init__.py  metrics.py  profiling.py  run_sql.py  viz.py
src/datamarts/: __init__.py  build_datamarts.py
src/ingestion/: __init__.py  load_data.py
src/transfomation/: clean_transform.py
src/transformation/: __init__.py  clean_transform.py
tests/: __init__.py  conftest.py  test_build_datamarts.py  test_clean_transform.py  test_cli.py  test_load_data.py  test_logging_config.py  test_main_blocks.py  test_metrics.py  test_paths.py  test_profiling.py  test_run_sql.py  test_run_sql_integration.py  test_viz.py
