[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-wc2026-analysis"
version = "1.0.0"
description = "FIFA World Cup 2026 — Player Performance Analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fouad MOUTAIROU", email = ""},
]

requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "duckdb>=0.10",
    "scipy>=1.13",
    "rich>=13.7",
    "fire>=0.6",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "flake8>=7.0",
    "isort>=5.13",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "plotly>=5.22",
    "scikit-learn>=1.4",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]