[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-wc2026-analysis"
version = "1.0.0"
description = "FIFA World Cup 2026 — Player Performance Analysis"
readme = "README.md"
license = {text = "MIT"}
keywords = ["fifa", "world-cup", "football", "data-analysis", "sports-analytics"]
authors = [
    {name = "Fouad MOUTAIROU"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Source = "https://github.com/Fouad-berry/fifa-wc2026-analysis"
Tracker = "https://github.com/Fouad-berry/fifa-wc2026-analysis/issues"

requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.10",
    "seaborn>=0.13,<0.14",
    "duckdb>=0.10",
    "scipy>=1.13",
    "rich>=13.7",
    "fire>=0.6",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "flake8>=7.0",
    "isort>=5.13",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "mypy>=1.10",
]

[project.scripts]
fifa-wc2026 = "src.cli_runner:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests/*"
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::PendingDeprecationWarning:seaborn.*",
]